using html5 identity from ajlkn for the website

--- a/index.html
+++ b/index.html
@@ -1,41 +1,67 @@
-<!doctype html>
+<!DOCTYPE HTML>
+	<!-- /*
+		Identity by HTML5 UP
+		html5up.net | @ajlkn
+		Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	*/ -->
+
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Karthikcru.com by karthikcru</title>
+	<head>
+		<title>Karthik Natarajan</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-loading">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Karthikcru.com</h1>
-        <p>My Website</p>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-        <p class="view"><a href="https://github.com/karthikcru/karthikcru.com">View the Project on GitHub <small>karthikcru/karthikcru.com</small></a></p>
+				<!-- Main -->
+					<section id="main">
+						<header>
+							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<h1>Karthik Natarajan</h1>
+							<p>Software Engineer</p>
+						</header>
+						<footer>
+							<ul class="icons">
+								<li>
+									<a href="https://twitter.com/nkarthie" class="fa-twitter">
+										https://twitter.com/nkarthie
+									</a>
+								</li>
+								<li>
+									<a href="http://github.com/karthikcru" class="fa-github">
+										http://github.com/karthikcru
+									</a>
+								</li>
+								<li>
+									<a href="http://facebook.com/karthikcru" class="fa-facebook">
+										http://facebook.com/karthikcru
+									</a>
+								</li>
+								<li>
+									<a href="https://www.linkedin.com/in/karthik-natarajan-5b33b769" class="fa-linkedin">
+										https://www.linkedin.com/in/karthik-natarajan-5b33b769
+									</a>
+								</li>
+
+							</ul>
+						</footer>
+					</section>
 
 
-        <ul>
-          <li><a href="https://github.com/karthikcru/karthikcru.com/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/karthikcru/karthikcru.com/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/karthikcru/karthikcru.com">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <p>Hi, I am karthikcru</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/karthikcru">karthikcru</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+			</div>
+
+
+			<script>
+				if ('addEventListener' in window) {
+					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
+					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				}
+			</script>
+
+	</body>
 </html>
