--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Karthik Natarajan</h1>
-								<p>Software engineer, singer, runner and many more things</p>
+								<p>Happily married, Software engineer, singer, musician, avid runner, cyclist and many more things</p>
 							</div>
 						</div>
 						<nav>
