Change title and update Markdown handling

--- a/ooty_25.html
+++ b/ooty_25.html
@@ -3,40 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markdown to HTML Converter</title>
+    <title>Ooty Trip</title>
     <style>
-        body { font-family: sans-serif; max-width: 900px; margin: 0 auto; padding: 20px; display: flex; flex-direction: column; }
-        h1 { text-align: center; }
-        .container { display: flex; flex-direction: row; gap: 20px; }
-        textarea, .output-preview { flex: 1; padding: 10px; border: 1px solid #ccc; font-size: 16px; min-height: 500px; overflow-y: scroll; white-space: pre-wrap; word-wrap: break-word; }
-        .output-preview { background-color: #f9f9f9; padding: 15px; }
-        pre { background: #eef; padding: 10px; border-radius: 5px; overflow-x: auto; }
+        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 0 auto; padding: 20px; }
+        pre { background: #f4f4f4; padding: 10px; border-radius: 5px; overflow-x: auto; }
+        code { font-family: monospace; }
+        h1, h2, h3 { border-bottom: 1px solid #ddd; padding-bottom: 0.3em; }
     </style>
 </head>
 <body>
+    <div id="markdown-output"></div>
 
-    <h1>Markdown to HTML Converter</h1>
-
-    <div class="container">
-        <textarea id="markdown-input" placeholder="Paste your Markdown here..."></textarea>
-        <div class="output-preview"></div>
-    </div>
-
-    <!-- The marked.js library is loaded from a CDN -->
+    <!-- The marked.js library is loaded from a CDN to convert Markdown to HTML -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    
     <script>
-        const markdownInput = document.getElementById('markdown-input');
-        const outputPreview = document.querySelector('.output-preview');
+        const markdownPath = 'md-pages/ooty_trip.md'; // Path to your Markdown file
+        const outputElement = document.getElementById('markdown-output');
 
-        // Function to convert and display Markdown
-        function convertMarkdown() {
-            const markdownText = markdownInput.value;
-            const htmlContent = marked.parse(markdownText);
-            outputPreview.innerHTML = htmlContent;
-        }
-
-        // Run the conversion whenever the user types
-        markdownInput.addEventListener('input', convertMarkdown);
+        fetch(markdownPath)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(markdownContent => {
+                // Convert Markdown to HTML
+                const htmlContent = marked.parse(markdownContent);
+                // Insert the resulting HTML into the designated div
+                outputElement.innerHTML = htmlContent;
+            })
+            .catch(error => {
+                console.error('Error fetching or rendering the Markdown:', error);
+                outputElement.innerHTML = '<p>Failed to load the Markdown content. Please check the file path.</p>';
+            });
     </script>
 
 </body>
